log
lu., 18 de abr. de 2022 11:56:49: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
aa89b79
lu., 18 de abr. de 2022 14:29:27: 
 tests:  4|7
total_score: 5/70
8f5d279
lu., 18 de abr. de 2022 15:03:06: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  4|7
total_score: 5/70
7169a7e
lu., 18 de abr. de 2022 15:08:36: 
 tests:  4|7
total_score: 5/70
aee3e7e
lu., 18 de abr. de 2022 15:13:29: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
26ccb27
lu., 18 de abr. de 2022 15:26:34: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
9d41229
lu., 18 de abr. de 2022 17:34:50: 
 treemap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ae48c1d
lu., 18 de abr. de 2022 17:43:51: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
e310857
lu., 18 de abr. de 2022 17:44:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
2a7d187
lu., 18 de abr. de 2022 17:45:07: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3a41755
lu., 18 de abr. de 2022 17:47:30: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
309deee
lu., 18 de abr. de 2022 17:50:51: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
189d33f
lu., 18 de abr. de 2022 17:52:02: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
623369e
lu., 18 de abr. de 2022 17:54:45: 
 treemap.c | 34 ++++------------------------------
 1 file changed, 4 insertions(+), 30 deletions(-)
 tests:  11|6
total_score: 15/70
76e7df1
lu., 18 de abr. de 2022 17:57:41: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
2aedc4a
lu., 18 de abr. de 2022 17:59:00: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
ee1af1f
ma., 19 de abr. de 2022 15:02:49: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
50b5a10
ma., 19 de abr. de 2022 15:09:08: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
ace8366
ma., 19 de abr. de 2022 15:09:53: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:111:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f026149
ma., 19 de abr. de 2022 15:10:34: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
aa33919
ma., 19 de abr. de 2022 15:11:32: 
 treemap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:55:46: error: 'return' with a value, in function returning void [-Werror]
         if (  *keyCurrent == *keyAux) return (Pair* ) tree->current->pair;
                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
treemap.c:48:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
afc5e4b
ma., 19 de abr. de 2022 15:11:52: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
af0f37e
ma., 19 de abr. de 2022 15:17:14: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:102:13: error: implicit declaration of function 'lower_than' [-Werror=implicit-function-declaration]
         if( lower_than ( tree->current->pair->key, key)){
             ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a49cc82
ma., 19 de abr. de 2022 15:17:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
b597eed
ma., 19 de abr. de 2022 15:18:13: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
5b38102
ma., 19 de abr. de 2022 15:19:15: 
 treemap.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
49c23a0
ma., 19 de abr. de 2022 15:22:37: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
9964237
